--- a/DOM/html/buoi01.html
+++ b/DOM/html/buoi01.html
@@ -43,7 +43,7 @@
     <br>
 
     <!-- Script -->
-    <script src="./buoi01.js"></script>
+    <script src="../js/buoi01.js"></script>
 </body>
 
 </html>
