--- a/DOM/html/buoi02.html
+++ b/DOM/html/buoi02.html
@@ -35,7 +35,7 @@
     <h2 id="doubleClick" ondblclick="doubleClickH2()">nội dung ban đầu</h2>
 
     <!-- Script -->
-    <script src="./buoi02.js"></script>
+    <script src="../js/buoi02.js"></script>
 </body>
 
 </html>
